# bishop-ai

./: .env.template  README.md  docker-compose.yml
agent/: Dockerfile  main.py  pyproject.toml
