[tool.poetry]
name = "bishop-agent"
version = "0.1.0"
description = "LangChain-based agent for Bishop assistant"
authors = ["Jared Hess <hessjar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
